@@ -16,7 +16,8 @@ svyttest(formula, design,  ...)
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{formula}{Formula, \code{outcome~group} for two-sample,
-    \code{outcome~0} or \code{outcome~1} for one-sample }
+    \code{outcome~0} or \code{outcome~1} for one-sample. \code{group}
+    must be a factor or character with two levels, or be coded 0/1 }
   \item{design}{survey design object}
   \item{\dots}{for methods }
 }
@@ -31,6 +32,8 @@ dclus2<-svydesign(id=~dnum+snum, fpc=~fpc1+fpc2, data=apiclus2)
 tt<-svyttest(enroll~comp.imp, dclus2)
 tt
 confint(tt, level=0.9)
+
+svyttest(enroll~I(stype=="E"),dclus2)
 
 svyttest(I(api00-api99)~0, dclus2)
 
